z-index adjustment for search results to avoid overlap with index tabs

--- a/pulter-site/styles/scss/components/_home.scss
+++ b/pulter-site/styles/scss/components/_home.scss
@@ -706,6 +706,8 @@
   }
 
   .masthead-box {
+    position: relative;
+    z-index: 3;
     max-width: $maxWidth;
     margin: 0 auto;
     padding: 1.66em 0 1.5em 0;
